2009-01-28  Dan Fandrich <dan@coneharvesters.com>

	* Decode the value for EXIF_TAG_LIGHT_SOURCE and EXIF_TAG_SCENE_TYPE
	* Split out the generic ExifEntry formatting code into a new function
	  exif_entry_format_value()
	* Fixed some signed vs unsigned formatting errors
	* Format the EXIF_TAG_GPS_TIME_STAMP & EXIF_TAG_GPS_ALTITUDE_REF tags
	* Improved the wrong data type fixup

2009-01-22  Dan Fandrich <dan@coneharvesters.com>

	* Fix exif_tag_get_support_level_in_ifd() to handle the case where two
	  tags with the same number exist in different IFDs.
	* Added test-tagtable to do some tests on the static EXIF tag
	  information table.

2009-01-21  Dan Fandrich <dan@coneharvesters.com>

	* libexif/exif-entry.c: Initialize the default for EXIF_TAG_COLOR_SPACE
	  to "Uncalibrated"
	* libexif/exif-data.c: Reduce the recursion limit
	* When the data type is not known in exif_tag_get_support_level_in_ifd
	  check the support level for all data types and if it's all the same,
	  return that. This means that fixing a new EXIF tag block will
	  actually create some tags in it now.

2009-01-15  Dan Fandrich <dan@coneharvesters.com>

	* Interpret more Sanyo MakerNote tags

2009-01-12  Dan Fandrich <dan@coneharvesters.com>

	* Added support for Epson MakerNotes, which have the identical
	  tag format and namespace of the Olympus ones.

2009-01-06  Dan Fandrich <dan@coneharvesters.com>

	* libexif/exif-tags.c: Added remaining GPS tags from the EXIF 2.2
	  spec to the tag table.

2009-01-03  Dan Fandrich <dan@coneharvesters.com>

	* contrib/examples/photographer.c: Added example program to show how
	  to display EXIF and MakerNote tags

2008-12-22  Dan Fandrich <dan@coneharvesters.com>

	* po/vi.po: Updated Vietnamese translation by Clytie Siddall
        * Fixed bug #1946138 to stop ignoring CFLAGS in the sqrt configure test

2008-11-25  Dan Fandrich <dan@coneharvesters.com>

	* po/sk.po: Updated Slovak translation by Ivan Masár
