@@ -47,7 +47,7 @@ static const struct {
 	{MNOTE_NIKON_TAG_WHITEBALANCERB,  "WHITEBALANCERB", N_("White Balance RB"), ""},
 	{MNOTE_NIKON_TAG_UNKNOWN_0X000D,  NULL, NULL, NULL},
 	{MNOTE_NIKON_TAG_ISOSELECTION,    "ISOSELECTION", N_("ISO Selection"), ""},
-	{MNOTE_NIKON_TAG_PREVIEWIMAGE,    "PREVIEWIMAGE", N_("Preview Image"), ""},
+	{MNOTE_NIKON_TAG_PREVIEWIMAGE_IFD_POINTER, "PREVIEWIMAGE", N_("Preview Image IFD"), ""},
 	{MNOTE_NIKON_TAG_EXPOSUREDIFF,    "EXPOSUREDIFF", N_("Exposurediff ?"), ""},
 	{MNOTE_NIKON_TAG_FLASHEXPCOMPENSATION, "FLASHEXPCOMPENSATION", N_("Flash Exposure Compensation"), ""},
 	{MNOTE_NIKON_TAG_ISO2,            "ISO", N_("ISO Setting"), ""},
